--- a/announcement.html
+++ b/announcement.html
@@ -13,18 +13,123 @@
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
     <a class="nav-link" href="index.html#about">About</a>
     <a class="nav-link" href="tasks.html">Tasks</a>
-    <a class="nav-link" href="index.html#participation">Participation</a>
+    <a class="nav-link" href="participation.html">Participation</a>
     <a class="nav-link" href="organizers.html">Organizers</a>
   </nav>
 
+<section class="task-announcement container py-5">
+  <div class="announcement-header text-center mb-4">
+    <h2>📢 Task Announcement</h2>
+    <h3 class="task-title">SemEval 2026 Shared Task</h3>
+    <p class="lead">Detecting Multilingual, Multicultural, and Multievent Online Polarization</p>
+    <p class="text-muted">🗓️ Announced: June 2025</p>
+    <p>🔍 Organized by:<br>
+      University of Hamburg, Bahir Dar University, Macquarie University, Imperial College London, 
+      University of Pretoria, Zayed University, Bayero University Kano, Northeastern University
+    </p>
+  </div>
+
+  <div class="announcement-section mb-5">
+    <h4 class="section-heading">🚨 What Is This Task About?</h4>
+    <p>
+      This new SemEval task tackles a socially urgent and computationally complex challenge:
+      detecting polarization in online texts across different languages, cultures, and events.
+    </p>
+    <p><strong>This task asks:</strong><br>
+      How can we build NLP systems that detect, interpret, and explain polarized language globally?
+    </p>
+  </div>
+
+  <div class="announcement-section mb-5">
+    <h4 class="section-heading">💡 Why Join This Task?</h4>
+    <ul>
+      <li>Tackle one of the most pressing social problems of our time</li>
+      <li>Work with rich, diverse datasets from 5 continents</li>
+      <li>Develop models for low- and mid-resource languages</li>
+      <li>Participate in a global NLP benchmark on polarization</li>
+      <li>Contribute to socially responsible, explainable AI</li>
+      <li>Gain visibility at SemEval 2026 and the ACL workshop</li>
+    </ul>
+  </div>
+
+  <div class="announcement-section mb-5">
+    <h4 class="section-heading">🌍 What's Unique About This Task?</h4>
+    <ul>
+      <li>Multilingual coverage across high, mid, and low-resource languages</li>
+      <li>Datasets from real-world events: elections, protests, conflicts</li>
+      <li>Three subtasks: from detection to fine-grained explanation</li>
+      <li>Focus on interpretability, sociocultural context, and ethical NLP</li>
+      <li>Annotations by native speakers using expert guidelines</li>
+    </ul>
+  </div>
+
+  <div class="announcement-section mb-5">
+    <h4 class="section-heading">🧪 Task Snapshot</h4>
+    <ul>
+      <li><strong>Subtask 1:</strong> Detect whether a text is polarized</li>
+      <li><strong>Subtask 2:</strong> Classify the target of polarization (e.g., religion, politics, race)</li>
+      <li><strong>Subtask 3:</strong> Identify how polarization is expressed (e.g., dehumanization, stereotyping)</li>
+    </ul>
+  </div>
+
+  <div class="announcement-section mb-5">
+    <h4 class="section-heading">🗃️ Data Release Schedule</h4>
+    <ul>
+      <li>Pilot data available: <strong>July 2025</strong></li>
+      <li>Full training/dev/test splits: <strong>August 2025</strong></li>
+      <li>Evaluation phase: <strong>September–October 2025</strong></li>
+      <li>Paper submission to SemEval: <strong>November 2025</strong></li>
+    </ul>
+  </div>
+
+  <div class="announcement-section mb-5">
+    <h4 class="section-heading">📈 Who Can Participate?</h4>
+    <p>This task is open to individuals or teams interested in:</p>
+    <ul>
+      <li>NLP and low-resource language processing</li>
+      <li>Computational social science and ethics</li>
+      <li>Misinformation, hate speech, and polarization</li>
+      <li>Cross-cultural communication and peacebuilding</li>
+    </ul>
+  </div>
+
+  <div class="announcement-section mb-5">
+    <h4 class="section-heading">📥 Get Involved</h4>
+    <ul>
+      <li>Join our mailing list (link coming soon)</li>
+      <li>Follow us on GitHub (link coming soon)</li>
+      <li>Join our Slack community (TBA)</li>
+      <li>Email us: <a href="mailto:your-email@domain.com">your-email@domain.com</a></li>
+    </ul>
+  </div>
+
+  <div class="announcement-section mb-5">
+    <h4 class="section-heading">🧑‍💻 Starter Kits and Baselines</h4>
+    <ul>
+      <li>Preprocessing scripts and tokenizers</li>
+      <li>Baseline models (transformers, multilingual)</li>
+      <li>Annotation guidelines and tutorials</li>
+      <li>Evaluation metrics and scripts</li>
+    </ul>
+  </div>
+
+  <div class="announcement-section text-center">
+    <h4 class="section-heading">🧠 Let’s Build NLP for a Divided World</h4>
+    <p>
+      Join us for SemEval 2026.<br />
+      Let’s move toward a future where NLP not only powers apps—but helps heal divides.
+    </p>
+  </div>
+</section>
 
 
-  <footer class="footer-section mt-5">
-    <div class="footer-container">
-      <p>&copy; 2025 POLAR Shared Task. All rights reserved.</p>
-      <p>Made with ❤️ by the POLAR Team</p>
-    </div>
-  </footer>
+<footer class="footer-section">
+  <div class="footer-container text-center">
+    <img src="assets/logo-small.png" alt="POLAR Task Logo" style="width: 80px; height: auto; margin-bottom: 10px;" />
+    <p>&copy; 2026 POLAR Shared Task. All rights reserved.</p>
+    <p>Made with ❤️ by the POLAR Team</p>
+  </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
