--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav class="nav nav-tabs justify-content-center shadow-sm bg-white sticky-top">
     <a class="nav-link active" href="#about">About</a>
     <a class="nav-link" href="tasks.html">Tasks</a>
-    <a class="nav-link" href="#participation">Participation</a>
+    <a class="nav-link" href="participation.html">Participation</a>
     <a class="nav-link" href="organizers.html">Organizers</a>
   </nav>
 
@@ -62,22 +62,27 @@
     <!-- Row 1: Goal + About POLAR -->
     <div class="row">
       <div class="col col--6" style="margin: 2rem 0rem">
-        <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">🎯</div>
-        <div class="text--center padding-horiz--md">
-          <h3>The Goal</h3>
-          <p>Explore and address online polarization through a diverse multilingual dataset across real-world events.</p>
-        </div>
+        <a href="goal.html" style="text-decoration: none; color: inherit; display: block;">
+          <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">🎯</div>
+          <div class="text--center padding-horiz--md">
+            <h3>The Goal</h3>
+            <p>Explore and address online polarization through a diverse multilingual dataset across real-world events.</p>
+          </div>
+        </a>
       </div>
 
       <div class="col col--6" style="margin: 2rem 0rem">
-        <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📚</div>
-        <div class="text--center padding-horiz--md">
-          <h3>About POLAR</h3>
-          <p>POLAR contains 23k+ instances in 7 languages, annotated for presence, type, and manifestation of polarization.</p>
-        </div>
+        <a href="about.html" style="text-decoration: none; color: inherit; display: block;">
+          <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📚</div>
+          <div class="text--center padding-horiz--md">
+            <h3>About POLAR</h3>
+            <p>POLAR contains 23k+ instances in 7 languages, annotated for presence, type, and manifestation of polarization.</p>
+          </div>
+        </a>
       </div>
     </div>
 
+    <!-- Row 2: Docs, News, Connect -->
     <div class="row">
       <div class="col col--4" style="margin: 2rem 0rem">
         <div class="text--center" style="font-size: 2.5rem; margin-bottom: 0.5rem">📄</div>
@@ -86,7 +91,7 @@
           <p>Read the task description, download the data, and learn how to submit your results!</p>
         </div>
         <div class="text--center">
-          <a class="button button--secondary" href="#">🔍 Read More</a>
+          <a class="button button--secondary" href="documentation.html">🔍 Read More</a>
         </div>
       </div>
 
@@ -97,7 +102,7 @@
           <p>Stay up-to-date with the latest news and updates about the POLAR shared task!</p>
         </div>
         <div class="text--center">
-          <a class="button button--secondary" href="#">🔍 Read More</a>
+          <a class="button button--secondary" href="news.html">🔍 Read More</a>
         </div>
       </div>
 
@@ -108,7 +113,7 @@
           <p>Join the POLAR community and collaborate with fellow researchers and participants!</p>
         </div>
         <div class="text--center">
-          <a class="button button--secondary" href="#" target="_blank">🔍 Read More</a>
+          <a class="button button--secondary" href="connected.html" target="_blank">🔍 Read More</a>
         </div>
       </div>
     </div>
@@ -116,6 +121,7 @@
     <br><hr>
   </div>
 </section>
+
 
 <section class="organizers-section">
   <div class="container">
@@ -136,7 +142,8 @@
 
   </div>
 <footer class="footer-section">
-  <div class="footer-container">
+  <div class="footer-container text-center">
+    <img src="assets/logo-small.png" alt="POLAR Task Logo" style="width: 80px; height: auto; margin-bottom: 10px;" />
     <p>&copy; 2026 POLAR Shared Task. All rights reserved.</p>
     <p>Made with ❤️ by the POLAR Team</p>
   </div>
