--- a/organizers.html
+++ b/organizers.html
@@ -22,32 +22,147 @@
   <!-- Page Content -->
   <section class="organizers" style="margin-top: 2rem;">
   <div class="container">
-    <h2>👩‍💼 Organizers</h2>
+    <h2>Organizers</h2>
     <p>This task is organized by a diverse team of researchers passionate about sentiment analysis, social media, multilingual NLP, and explainable AI. We aim to foster innovation, collaboration, and impactful research through this shared task.</p>
 
-    <h3>🧑‍🔬 Core Organizing Team</h3>
-    <ul>
-      <li>
-        <strong>Dr. [Lead Organizer's Name]</strong><br>
-        University / Institution Name<br>
-        Expertise: 
-      </li>
-      <li>
-        <strong>[Second Organizer's Name]</strong><br>
-        University / Institution Name<br>
-        Expertise: 
-      </li>
-      <li>
-        <strong>[Third Organizer's Name]</strong><br>
-        University / Institution Name<br>
-        Expertise: 
-      </li>
-      <li>
-        <strong>[Fourth Organizer's Name]</strong><br>
-        University / Institution Name<br>
-        Expertise: 
-      </li>
-    </ul>
+    <h3>Core Organizing Team</h3>
+   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 mt-3">
+ <!-- Organizer 1 -->
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/seid.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Dr. Seid Muhie Yimam</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/shamsuddeen.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Shamsuddeen Hassan Muhammad</h6>
+      <p class="card-text mb-0 organizer-text">Imperial College London</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/usman.jpeg" class="card-img-top organizer-img" alt="Usman Naseem">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Usman Naseem</h6>
+      <p class="card-text mb-0 organizer-text">Macquarie University</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/robert.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">M.Sc. Robert Geislinger</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/saba.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Saba Anwar</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/adem.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Adem Chanie Ali</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="/assets/images/martin.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Dr. Martin Semmann</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/chris.jpg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Prof. Dr. Chris Biemann</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/abhinew.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Abinew Ali Ayele</h6>
+      <p class="card-text mb-0 organizer-text">Bahir Dar University</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/Sarah Kohail.png" class="card-img-top organizer-img" alt="Sarah Kohail">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Sarah Kohail</h6>
+      <p class="card-text mb-0 organizer-text">Zayed University</p>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/Screenshot 2025-06-12 at 12.03.34 PM.png" class="card-img-top organizer-img" alt="Juan Ren">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Juan Ren</h6>
+      <p class="card-text mb-0 organizer-text">Macquarie University</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/idris.png" class="card-img-top organizer-img" alt="Idris Abdulmumin">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Idris Abdulmumin</h6>
+      <p class="card-text mb-0 organizer-text">University of Pretoria</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+ 
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/ibrahim.png" class="card-img-top organizer-img" alt="Ibrahim Said Ahmad">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Ibrahim Said Ahmad</h6>
+      <p class="card-text mb-0 organizer-text">Bayero University Kano (BUK), Northeastern University</p>
+    </div>
+  </div>
+</div>
+   </div>
 
     <h3>💬 Contact Us</h3>
     <p>For any queries related to the task, dataset, or participation, feel free to write to us:</p>
@@ -61,11 +176,16 @@
       <li><a href="#" target="_blank" rel="noopener noreferrer">CodaLab Task Page</a></li>
     </ul>
 
-    <h3>🤝 Collaborating Institutions</h3>
+    <h3>Collaborating Institutions</h3>
     <ul>
-      <li>[University / Lab 1]</li>
-      <li>[University / Lab 2]</li>
-      <li>[Research Center or Organization]</li>
+        <li>Macquarie University (MU), Australia</li>
+  <li>University of Hamburg (UHH), Germany</li>
+  <li>Bahir Dar University (BDU), Ethiopia</li>
+  <li>Imperial College London (ICL), United Kingdom</li>
+  <li>University of Pretoria (UP), South Africa</li>
+  <li>Zayed University (ZU), United Arab Emirates</li>
+  <li>Bayero University Kano (BUK), Nigeria</li>
+  <li>Northeastern University, United States</li>
     </ul>
     <p>If you or your organization are interested in collaborating or sponsoring, please get in touch with us.</p>
   </div>
