--- a/organizers.html
+++ b/organizers.html
@@ -16,7 +16,6 @@
     <a class="nav-link" href="index.html#about">About</a>
     <a class="nav-link" href="tasks.html">Tasks</a>
     <a class="nav-link" href="participation.html">Participation</a>
-    <a class="nav-link active" href="organizers.html">Organizers</a>
   </nav>
 
   <!-- Page Content -->
@@ -28,11 +27,31 @@
     <h3>Core Organizing Team</h3>
    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 mt-3">
  <!-- Organizer 1 -->
+ 
+ <div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/usman.jpeg" class="card-img-top organizer-img" alt="Usman Naseem">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Usman Naseem</h6>
+      <p class="card-text mb-0 organizer-text">Macquarie University</p>
+    </div>
+  </div>
+</div>
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
     <img src="assets/images/seid.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Seid Muhie Yimam</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/robert.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">M.Sc. Robert Geislinger</h6>
       <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
     </div>
   </div>
@@ -50,19 +69,29 @@
 
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/usman.jpeg" class="card-img-top organizer-img" alt="Usman Naseem">
+    <img src="assets/images/Sarah Kohail.png" class="card-img-top organizer-img" alt="Sarah Kohail">
     <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Usman Naseem</h6>
-      <p class="card-text mb-0 organizer-text">Macquarie University</p>
+      <h6 class="card-title mb-1 fw-semibold">Sarah Kohail</h6>
+      <p class="card-text mb-0 organizer-text">Zayed University</p>
     </div>
   </div>
 </div>
 
+
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/robert.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <img src="assets/images/Screenshot 2025-06-12 at 12.03.34 PM.png" class="card-img-top organizer-img" alt="Juan Ren">
     <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">M.Sc. Robert Geislinger</h6>
+      <h6 class="card-title mb-1 fw-semibold">Juan Ren</h6>
+      <p class="card-text mb-0 organizer-text">Macquarie University</p>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/rudy.jpg" class="card-img-top organizer-img" alt="Juan Ren">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Rudy Alexandro Garrido Veliz</h6>
       <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
     </div>
   </div>
@@ -77,7 +106,33 @@
     </div>
   </div>
 </div>
-
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/ibrahim.png" class="card-img-top organizer-img" alt="Ibrahim Said Ahmad">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Ibrahim Said Ahmad</h6>
+      <p class="card-text mb-0 organizer-text">Bayero University Kano (BUK), Northeastern University</p>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/idris.png" class="card-img-top organizer-img" alt="Idris Abdulmumin">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Idris Abdulmumin</h6>
+      <p class="card-text mb-0 organizer-text">University of Pretoria</p>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/abhinew.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Abinew Ali Ayele</h6>
+      <p class="card-text mb-0 organizer-text">Bahir Dar University</p>
+    </div>
+  </div>
+</div>
 <div class="col">
   <div class="card organizer-card shadow-sm border-0">
     <img src="assets/images/adem.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
@@ -109,59 +164,17 @@
   </div>
 </div>
 
-<div class="col">
-  <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/abhinew.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
-    <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Abinew Ali Ayele</h6>
-      <p class="card-text mb-0 organizer-text">Bahir Dar University</p>
-    </div>
-  </div>
-</div>
 
 
-<div class="col">
-  <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/Sarah Kohail.png" class="card-img-top organizer-img" alt="Sarah Kohail">
-    <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Sarah Kohail</h6>
-      <p class="card-text mb-0 organizer-text">Zayed University</p>
-    </div>
-  </div>
-</div>
-<div class="col">
-  <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/Screenshot 2025-06-12 at 12.03.34 PM.png" class="card-img-top organizer-img" alt="Juan Ren">
-    <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Juan Ren</h6>
-      <p class="card-text mb-0 organizer-text">Macquarie University</p>
-    </div>
-  </div>
-</div>
 
 
-<div class="col">
-  <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/idris.png" class="card-img-top organizer-img" alt="Idris Abdulmumin">
-    <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Idris Abdulmumin</h6>
-      <p class="card-text mb-0 organizer-text">University of Pretoria</p>
-    </div>
-  </div>
-</div>
+
+
 
 <div class="col">
  
 </div>
-<div class="col">
-  <div class="card organizer-card shadow-sm border-0">
-    <img src="assets/images/ibrahim.png" class="card-img-top organizer-img" alt="Ibrahim Said Ahmad">
-    <div class="card-body p-2 text-center">
-      <h6 class="card-title mb-1 fw-semibold">Ibrahim Said Ahmad</h6>
-      <p class="card-text mb-0 organizer-text">Bayero University Kano (BUK), Northeastern University</p>
-    </div>
-  </div>
-</div>
+
    </div>
 
     <h3>💬 Contact Us</h3>
