--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a class="nav-link active" href="#about">About</a>
     <a class="nav-link" href="tasks.html">Tasks</a>
     <a class="nav-link" href="participation.html">Participation</a>
-    <a class="nav-link" href="organizers.html">Organizers</a>
+
   </nav>
 
   <div class="container my-5">
@@ -122,22 +122,190 @@
   </div>
 </section>
 
-
-<section class="organizers-section">
+<!-- Page Content -->
+  <section class="organizers" style="margin-top: 2rem;">
   <div class="container">
-    <h2>👥 Task Organizers</h2>
-    <div class="organizers-list">
-      <div class="organizer">
-        <h3>Organizer 1</h3>
-        <a href="https://polarization-processing.org" target="_blank" rel="noopener noreferrer" class="btn-org">🌐 Visit Website</a>
-      </div>
-      <div class="organizer">
-        <h3>Organizer 2</h3>
-        <a href="https://uniglobal.edu" target="_blank" rel="noopener noreferrer" class="btn-org">🌐 Visit Website</a>
-      </div>
+   
+    <h2>Task Organizers and Collaborators</h2>
+   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 mt-3">
+ <!-- Organizer 1 -->
+ 
+ <div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/usman.jpeg" class="card-img-top organizer-img" alt="Usman Naseem">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Usman Naseem</h6>
+      <p class="card-text mb-0 organizer-text">Macquarie University</p>
     </div>
   </div>
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/seid.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Dr. Seid Muhie Yimam</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/robert.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">M.Sc. Robert Geislinger</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/shamsuddeen.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Shamsuddeen Hassan Muhammad</h6>
+      <p class="card-text mb-0 organizer-text">Imperial College London</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/Sarah Kohail.png" class="card-img-top organizer-img" alt="Sarah Kohail">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Sarah Kohail</h6>
+      <p class="card-text mb-0 organizer-text">Zayed University</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/Screenshot 2025-06-12 at 12.03.34 PM.png" class="card-img-top organizer-img" alt="Juan Ren">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Juan Ren</h6>
+      <p class="card-text mb-0 organizer-text">Macquarie University</p>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/rudy.jpg" class="card-img-top organizer-img" alt="Juan Ren">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Rudy Alexandro Garrido Veliz</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/saba.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Saba Anwar</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/ibrahim.png" class="card-img-top organizer-img" alt="Ibrahim Said Ahmad">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Ibrahim Said Ahmad</h6>
+      <p class="card-text mb-0 organizer-text">Bayero University Kano (BUK), Northeastern University</p>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/idris.png" class="card-img-top organizer-img" alt="Idris Abdulmumin">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Idris Abdulmumin</h6>
+      <p class="card-text mb-0 organizer-text">University of Pretoria</p>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/abhinew.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Abinew Ali Ayele</h6>
+      <p class="card-text mb-0 organizer-text">Bahir Dar University</p>
+    </div>
+  </div>
+</div>
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/adem.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Adem Chanie Ali</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="/assets/images/martin.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Dr. Martin Semmann</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+<div class="col">
+  <div class="card organizer-card shadow-sm border-0">
+    <img src="assets/images/chris.jpg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
+    <div class="card-body p-2 text-center">
+      <h6 class="card-title mb-1 fw-semibold">Prof. Dr. Chris Biemann</h6>
+      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+<div class="col">
+ 
+</div>
+
+   </div>
+
+    <h2>Contact Us</h2>
+    <p>For any queries related to the task, dataset, or participation, feel free to write to us:</p>
+    <p><a href="mailto:polar.semeval2026@nlp-research.org" style="font-weight: bold;"> polarization-semeval-2026-organisers@googlegroups.com</a></p>
+
+    <p>We also encourage you to follow updates and join discussions via:</p>
+    <ul>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">GitHub Repository</a></li>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">Mailing List</a></li>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">Twitter/X Profile</a></li>
+      <li><a href="#" target="_blank" rel="noopener noreferrer">CodaLab Task Page</a></li>
+    </ul>
+
+    <h2>Collaborating Institutions</h2>
+    <ul>
+        <li>Macquarie University (MU), Australia</li>
+  <li>University of Hamburg (UHH), Germany</li>
+  <li>Bahir Dar University (BDU), Ethiopia</li>
+  <li>Imperial College London (ICL), United Kingdom</li>
+  <li>University of Pretoria (UP), South Africa</li>
+  <li>Zayed University (ZU), United Arab Emirates</li>
+  <li>Bayero University Kano (BUK), Nigeria</li>
+  <li>Northeastern University, United States</li>
+    </ul>
+    <p>If you or your organization are interested in collaborating or sponsoring, please get in touch with us.</p>
+  </div>
 </section>
+
 
 
   </div>
