changed universitat ham

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <img src="assets/images/seid.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Seid Muhie Yimam</h6>
-      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg</p>
     </div>
   </div>
 </div>
@@ -154,7 +154,7 @@
     <img src="assets/images/robert.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">M.Sc. Robert Geislinger</h6>
-      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburgg</p>
     </div>
   </div>
 </div>
@@ -194,7 +194,7 @@
     <img src="assets/images/rudy.jpg" class="card-img-top organizer-img" alt="Juan Ren">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Rudy Alexandro Garrido Veliz</h6>
-      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg</p>
     </div>
   </div>
 </div>
@@ -204,7 +204,7 @@
     <img src="assets/images/saba.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Saba Anwar</h6>
-      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg</p>
     </div>
   </div>
 </div>
@@ -240,7 +240,7 @@
     <img src="assets/images/adem.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Adem Chanie Ali</h6>
-      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg</p>
     </div>
   </div>
 </div>
@@ -251,7 +251,7 @@
     <img src="/assets/images/martin.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Martin Semmann</h6>
-      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg/p>
     </div>
   </div>
 </div>
@@ -261,7 +261,7 @@
     <img src="assets/images/chris.jpg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Prof. Dr. Chris Biemann</h6>
-      <p class="card-text mb-0 organizer-text">Universität Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg</p>
     </div>
   </div>
 </div>
