--- a/tasks.html
+++ b/tasks.html
@@ -85,7 +85,7 @@
     </ul>
 
     <h3>Contact and Community</h3>
-    <p>For questions or to join the community, reach out via email at <a href="mailto:your-email@domain.com">your-email@domain.com</a>. Stay connected through the Slack channel, mailing list, and GitHub repository (links to be announced soon).</p>
+    <p>For questions or to join the community, reach out via email at <a href="polarization-semeval-2026-organisers@googlegroups.com">your-email@domain.com</a>. Stay connected through the Slack channel, mailing list, and GitHub repository (links to be announced soon).</p>
   </div>
 </section>
 
