--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <img src="assets/images/usman.jpeg" class="card-img-top organizer-img" alt="Usman Naseem">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Usman Naseem</h6>
-      <p class="card-text mb-0 organizer-text">Macquarie University</p>
+      <p class="card-text mb-0 organizer-text">Macquarie University (Australia)</p>
     </div>
   </div>
 </div>
@@ -144,7 +144,7 @@
     <img src="assets/images/seid.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Seid Muhie Yimam</h6>
-      <p class="card-text mb-0 organizer-text">University of Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)</p>
     </div>
   </div>
 </div>
@@ -154,7 +154,7 @@
     <img src="assets/images/robert.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Robert Geislinger</h6>
-      <p class="card-text mb-0 organizer-text">University of Hamburgg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)</p>
     </div>
   </div>
 </div>
@@ -164,7 +164,7 @@
     <img src="assets/images/shamsuddeen.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Shamsuddeen Hassan Muhammad</h6>
-      <p class="card-text mb-0 organizer-text">Imperial College London</p>
+      <p class="card-text mb-0 organizer-text">Imperial College London (UK)</p>
     </div>
   </div>
 </div>
@@ -174,7 +174,7 @@
     <img src="assets/images/Sarah Kohail.png" class="card-img-top organizer-img" alt="Sarah Kohail">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Sarah Kohail</h6>
-      <p class="card-text mb-0 organizer-text">Zayed University</p>
+      <p class="card-text mb-0 organizer-text">Zayed University (United Arab Emirates) </p>
     </div>
   </div>
 </div>
@@ -185,7 +185,7 @@
     <img src="assets/images/Screenshot 2025-06-12 at 12.03.34 PM.png" class="card-img-top organizer-img" alt="Juan Ren">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Juan Ren</h6>
-      <p class="card-text mb-0 organizer-text">Macquarie University</p>
+      <p class="card-text mb-0 organizer-text">Macquarie University (Australia)</p>
     </div>
   </div>
 </div>
@@ -194,7 +194,7 @@
     <img src="assets/images/rudy.jpg" class="card-img-top organizer-img" alt="Juan Ren">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Rudy Alexandro Garrido Veliz</h6>
-      <p class="card-text mb-0 organizer-text">University of Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)</p>
     </div>
   </div>
 </div>
@@ -204,7 +204,7 @@
     <img src="assets/images/saba.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Saba Anwar</h6>
-      <p class="card-text mb-0 organizer-text">University of Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)</p>
     </div>
   </div>
 </div>
@@ -213,7 +213,7 @@
     <img src="assets/images/ibrahim.png" class="card-img-top organizer-img" alt="Ibrahim Said Ahmad">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Ibrahim Said Ahmad</h6>
-      <p class="card-text mb-0 organizer-text">Bayero University Kano (BUK), Northeastern University</p>
+      <p class="card-text mb-0 organizer-text">Bayero University Kano (Nigeria), Northeastern University (USA)</p>
     </div>
   </div>
 </div>
@@ -222,7 +222,7 @@
     <img src="assets/images/idris.png" class="card-img-top organizer-img" alt="Idris Abdulmumin">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Idris Abdulmumin</h6>
-      <p class="card-text mb-0 organizer-text">University of Pretoria</p>
+      <p class="card-text mb-0 organizer-text">University of Pretoria (South Africa)</p>
     </div>
   </div>
 </div>
@@ -231,7 +231,7 @@
     <img src="assets/images/abhinew.png" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Abinew Ali Ayele</h6>
-      <p class="card-text mb-0 organizer-text">Bahir Dar University</p>
+      <p class="card-text mb-0 organizer-text">Bahir Dar University (Ethiopia)</p>
     </div>
   </div>
 </div>
@@ -240,7 +240,7 @@
     <img src="assets/images/adem.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Prof. Adem Chanie Ali</h6>
-      <p class="card-text mb-0 organizer-text">University of Hamburg</p>
+      <p class="card-text mb-0 organizer-text">Bahir Dar University (Ethiopia), University of Hamburg (Germany)</p>
     </div>
   </div>
 </div>
@@ -251,7 +251,7 @@
     <img src="/assets/images/martin.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Martin Semmann</h6>
-      <p class="card-text mb-0 organizer-text">University of Hamburg/p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)/p>
     </div>
   </div>
 </div>
@@ -261,7 +261,7 @@
     <img src="assets/images/chris.jpg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Prof. Dr. Chris Biemann</h6>
-      <p class="card-text mb-0 organizer-text">University of Hamburg</p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)</p>
     </div>
   </div>
 </div>
