--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     <img src="/assets/images/martin.jpeg" class="card-img-top organizer-img" alt="Seid Muhie Yimam">
     <div class="card-body p-2 text-center">
       <h6 class="card-title mb-1 fw-semibold">Dr. Martin Semmann</h6>
-      <p class="card-text mb-0 organizer-text">University of Hamburg (Germany)/p>
+      <p class="card-text mb-0 organizer-text">University of Hamburg (Germany) </p>
     </div>
   </div>
 </div>
