--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@
   <li>University of Pretoria (UP), South Africa</li>
   <li>Zayed University (ZU), United Arab Emirates</li>
   <li>Bayero University Kano (BUK), Nigeria</li>
-  <li>Northeastern University, United States</li>
+  <li>Northeastern University (NU), United States</li>
+  <li>Bahir Dar University (BDU), Ethiopia</li>
     </ul>
     <p>If you or your organization are interested in collaborating or sponsoring, please get in touch with us.</p>
   </div>
