minor & TBA updates

--- a/announcement.html
+++ b/announcement.html
@@ -21,7 +21,7 @@
     <h2>📢 Task Announcement</h2>
     <h3 class="task-title">SemEval 2026 Shared Task</h3>
     <p class="lead">Detecting Multilingual, Multicultural, and Multievent Online Polarization</p>
-    <p class="text-muted">🗓️ Announced: June 2025</p>
+    <p class="text-muted">🗓️ Announced: TBD</p>
     <p>🔍 Organized by:<br>
       University of Hamburg, Bahir Dar University, Macquarie University, Imperial College London, 
       University of Pretoria, Zayed University, Bayero University Kano, Northeastern University
@@ -74,10 +74,10 @@
   <div class="announcement-section mb-5">
     <h4 class="section-heading">🗃️ Data Release Schedule</h4>
     <ul>
-      <li>Pilot data available: <strong>July 2025</strong></li>
-      <li>Full training/dev/test splits: <strong>August 2025</strong></li>
-      <li>Evaluation phase: <strong>September–October 2025</strong></li>
-      <li>Paper submission to SemEval: <strong>November 2025</strong></li>
+      <li>Pilot data available: <strong>TBD</strong></li>
+      <li>Full training/dev/test splits: <strong>TBD</strong></li>
+      <li>Evaluation phase: <strong>TBD5</strong></li>
+      <li>Paper submission to SemEval: <strong>TBD</strong></li>
     </ul>
   </div>
 
