--- a/connected.html
+++ b/connected.html
@@ -47,9 +47,9 @@
     <h3>🎙️ Events & Webinars</h3>
     <p>We’ll host live Q&A sessions and webinars during major phases of the task:</p>
     <ul>
-      <li>Kickoff Webinar – July 2025</li>
-      <li>Data Walkthrough – October 2025</li>
-      <li>Evaluation Prep – January 2026</li>
+      <li>Kickoff Webinar – TBD</li>
+      <li>Data Walkthrough – TBD</li>
+      <li>Evaluation Prep – TBD</li>
     </ul>
     <p>Register details will be shared on this site and via email.</p>
 
