--- a/dates.html
+++ b/dates.html
@@ -33,43 +33,43 @@
       </thead>
       <tbody>
         <tr>
-          <td>October 2025</td>
+          <td>TBD</td>
           <td>Call for Participation Opens</td>
         </tr>
         <tr>
-          <td>December 2025</td>
+          <td>TBD</td>
           <td>Trial Data Released</td>
         </tr>
         <tr>
-          <td>January 2026</td>
+          <td>TBD</td>
           <td>Training Data Released</td>
         </tr>
         <tr>
-          <td>February 2026</td>
+          <td>TBD</td>
           <td>Test Data Released</td>
         </tr>
         <tr>
-          <td>March 2026</td>
+          <td>TBD</td>
           <td>System Submission Deadline</td>
         </tr>
         <tr>
-          <td>April 2026</td>
+          <td>TBD</td>
           <td>Evaluation Results Released</td>
         </tr>
         <tr>
-          <td>May 2026</td>
+          <td>TBD</td>
           <td>System Paper Submission Deadline</td>
         </tr>
         <tr>
-          <td>June 2026</td>
+          <td>TBD</td>
           <td>Notification of Acceptance</td>
         </tr>
         <tr>
-          <td>July 2026</td>
+          <td>TBD</td>
           <td>Camera-Ready Papers Due</td>
         </tr>
         <tr>
-          <td>August 2026</td>
+          <td>TBD</td>
           <td>SemEval-2026 Workshop at [Conference Location TBD]</td>
         </tr>
       </tbody>
