--- a/documentation.html
+++ b/documentation.html
@@ -144,12 +144,12 @@
           </tr>
         </thead>
         <tbody>
-          <tr><td>Task Release</td><td>Sept 2025</td></tr>
-          <tr><td>Trial Data Release</td><td>Sept 2025</td></tr>
-          <tr><td>Training Data Release</td><td>Oct 2025</td></tr>
-          <tr><td>Evaluation Phase</td><td>Jan 2026</td></tr>
-          <tr><td>Leaderboard + Feedback</td><td>Feb 2026</td></tr>
-          <tr><td>Paper Submission Due</td><td>March 2026</td></tr>
+          <tr><td>Task Release</td><td>TBD</td></tr>
+          <tr><td>Trial Data Release</td><td>TBD</td></tr>
+          <tr><td>Training Data Release</td><td>TBD</td></tr>
+          <tr><td>Evaluation Phase</td><td>TBD</td></tr>
+          <tr><td>Leaderboard + Feedback</td><td>TBD</td></tr>
+          <tr><td>Paper Submission Due</td><td>TBD</td></tr>
         </tbody>
       </table>
     </div>
