--- a/news.html
+++ b/news.html
@@ -26,15 +26,15 @@
 
     <h3>📅 Recent Announcements</h3>
     <ul>
-      <li><strong>✅ June 5, 2025</strong><br>
+      <li><strong>TBD</strong><br>
         Task Website Launched!<br>
         Welcome to the official website of the POLAR shared task. We’re excited to share details about the task and how you can participate.
       </li>
-      <li><strong>✅ June 12, 2025</strong><br>
+      <li><strong>TBD</strong><br>
         Call for Participation (CFP) Released<br>
         The CFP has been officially distributed through ACL and SemEval mailing lists. Please help us spread the word!
       </li>
-      <li><strong>⏳ June 20, 2025</strong><br>
+      <li><strong>TBD</strong><br>
         Trial Dataset Coming Soon<br>
         We will release a small trial dataset so participants can explore the data format and annotation scheme.
       </li>
@@ -51,31 +51,31 @@
       <tbody>
         <tr>
           <td style="padding: 8px;">Trial Data Release</td>
-          <td style="padding: 8px;">June 20, 2025</td>
+          <td style="padding: 8px;">TBD</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Registration Opens</td>
-          <td style="padding: 8px;">July 1, 2025</td>
+          <td style="padding: 8px;">TBD</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Training Data Release</td>
-          <td style="padding: 8px;">October 1, 2025</td>
+          <td style="padding: 8px;">TBD</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Evaluation Phase Begins</td>
-          <td style="padding: 8px;">January 10, 2026</td>
+          <td style="padding: 8px;">TBD</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Evaluation Phase Ends</td>
-          <td style="padding: 8px;">January 24, 2026</td>
+          <td style="padding: 8px;">TBD</td>
         </tr>
         <tr>
           <td style="padding: 8px;">Leaderboard Announced</td>
-          <td style="padding: 8px;">February 2026</td>
+          <td style="padding: 8px;">TBD</td>
         </tr>
         <tr>
           <td style="padding: 8px;">System Paper Submission Due</td>
-          <td style="padding: 8px;">March 15, 2026</td>
+          <td style="padding: 8px;">TBD</td>
         </tr>
       </tbody>
     </table>
@@ -91,7 +91,7 @@
     <ul>
       <li><strong>GitHub Discussions:</strong> Share ideas, ask questions, report issues</li>
       <li><strong>Slack (coming soon):</strong> Live chat with organizers and participants</li>
-      <li><strong>Q&A Webinars:</strong> Scheduled in July and October 2025</li>
+      <li><strong>Q&A Webinars:</strong> TBD </li>
     </ul>
 
   </div>
