--- a/participation.html
+++ b/participation.html
@@ -40,12 +40,12 @@
 
     <h3>🗓️ Important Dates</h3>
     <ul>
-      <li>Training Data Release: September 2025</li>
-      <li>Development Phase: October–December 2025</li>
-      <li>Evaluation Phase: January 2026</li>
-      <li>Result Submission Deadline: February 2026</li>
-      <li>Paper Submission Deadline: March 2026</li>
-      <li>Workshop at SemEval 2026: June/July 2026</li>
+      <li>Training Data Release: TBD</li>
+      <li>Development Phase: TBD</li>
+      <li>Evaluation Phase: TBD</li>
+      <li>Result Submission Deadline: TBD</li>
+      <li>Paper Submission Deadline: TBD</li>
+      <li>Workshop at SemEval 2026: TBD</li>
     </ul>
 
     <h3>🧪 Submissions & Evaluation</h3>
