--- a/tasks.html
+++ b/tasks.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>POLAR @ SemEval 2025</title>
+  <title>POLAR @ SemEval 2026</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -53,12 +53,12 @@
 
     <h3>Timeline</h3>
     <ul>
-      <li>Task announcement: June 2025</li>
-      <li>Data release: July 2025</li>
-      <li>Evaluation phase begins: September 2025</li>
-      <li>Submission deadline: October 2025</li>
-      <li>Paper submissions to SemEval: November 2025</li>
-      <li>SemEval Workshop at ACL: March or April 2026</li>
+      <li>Task announcement: TBD</li>
+      <li>Data release: TBD</li>
+      <li>Evaluation phase begins: TBD/li>
+      <li>Submission deadline: TBD</li>
+      <li>Paper submissions to SemEval: TBD</li>
+      <li>SemEval Workshop at ACL: TBD</li>
     </ul>
 
     <h3>Who Should Participate?</h3>
