--- a/getstarted.html
+++ b/getstarted.html
@@ -27,18 +27,18 @@
       Participants will develop models that can detect and interpret polarization in a variety of online contexts.
     </p>
     <p>
-      The task focuses on textual data collected from real-world events including elections, international conflicts, social protests, and ideological debates. The goal is to evaluate systems' abilities to identify polarized content, classify its target, and determine how polarization is expressed linguistically.
+      The task focuses on textual data collected from real-world events including elections, international conflicts, social protests, and ideological debates. The goal is to evaluate systems' abilities to identify polarized content and classify its target.
     </p>
 
     <h3>🌍 Multilingual, Multicultural, and Multievent Scope</h3>
     <p>
-      This task emphasizes global inclusivity and cross-cultural representation. We include data from 15 languages, many of which are low-resource and underrepresented in mainstream NLP tasks.
+      This task emphasizes global inclusivity and cross-cultural representation. We include data from multiple languages, many of which are low-resource and underrepresented in mainstream NLP tasks.
     </p>
     <p><strong>Languages include:</strong></p>
     <ul>
-      <li><strong>High-resource:</strong> English, German, Spanish, Arabic</li>
-      <li><strong>Mid-resource:</strong> Urdu, Mozambican Portuguese, Amharic</li>
-      <li><strong>Low-resource:</strong> Kinyarwanda, Hausa, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa</li>
+      <li><strong>High resource:</strong> English, German, Spanish, Arabic</li>
+      <li><strong>Mid and Low resource:</strong>  Urdu, Mozambican Portuguese, Amharic, Kinyarwanda, Hausa, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa, etc.</li>
+
     </ul>
 
     <h3>🧪 Task Format and Subtasks</h3>
@@ -77,13 +77,7 @@
       Dataset sources: News websites, Reddit, blogs, Bluesky, regional forums. Event types include elections, conflicts, gender rights, migration, and more.
     </p>
     <p>Each language has 3,000–5,000 annotated instances. Tools used: Label Studio, Prolific, Potato, Mechanical Turk.</p>
-    <p><strong>Sample Inter-Annotator Agreement (IAA):</strong></p>
-    <ul>
-      <li>Amharic: Kappa = 0.49</li>
-      <li>Urdu: Kappa = 0.83</li>
-      <li>English: Kappa = 0.52</li>
-    </ul>
-    <p>Datasets split into training, development, and test sets.</p>
+   
 
     <h3>🎯 Research Contributions</h3>
     <ul>
@@ -99,12 +93,12 @@
         <tr><th>Phase</th><th>Date (Tentative)</th></tr>
       </thead>
       <tbody>
-        <tr><td>Task Announcement</td><td>June 2025</td></tr>
-        <tr><td>Data Release</td><td>July 2025</td></tr>
-        <tr><td>Evaluation Phase Begins</td><td>September 2025</td></tr>
-        <tr><td>Submission Deadline</td><td>October 2025</td></tr>
-        <tr><td>Paper Submission to SemEval</td><td>November 2025</td></tr>
-        <tr><td>SemEval Workshop @ ACL</td><td>March or April 2026</td></tr>
+        <tr><td>Task Announcement</td><td>TBD</td></tr>
+        <tr><td>Data Release</td><td>TBD</td></tr>
+        <tr><td>Evaluation Phase Begins</td><td>TBD</td></tr>
+        <tr><td>Submission Deadline</td><td>TBD</td></tr>
+        <tr><td>Paper Submission to SemEval</td><td>TBD</td></tr>
+        <tr><td>SemEval Workshop @ ACL</td><td>TBD</td></tr>
       </tbody>
     </table>
 
@@ -124,7 +118,7 @@
 
     <h3>📬 Contact and Community</h3>
     <ul>
-      <li>Email: your-email@domain.com</li>
+      <li>Email: polarization-semeval-2026-organisers@googlegroups.com</li>
       <li>Slack Channel: Link TBA</li>
       <li>Mailing List: Link TBA</li>
       <li>GitHub: Link TBA</li>
