lang info update

--- a/tasks.html
+++ b/tasks.html
@@ -29,10 +29,10 @@
     <p>The task centers on textual data collected from real-world events such as elections, international conflicts, social protests, and ideological debates. The primary goal is to evaluate systems’ ability to identify polarized content, classify its targets, and determine the linguistic expressions of polarization.</p>
 
     <h3>Multilingual, Multicultural, and Multievent Scope</h3>
-    <p>To promote global inclusivity and cross-cultural representation, the dataset encompasses 15 languages, including many low-resource and underrepresented ones in mainstream NLP research.</p>
-    <p><strong>High-resource languages:</strong> English, German, Spanish, Arabic.</p>
-    <p><strong>Mid-resource languages:</strong> Urdu, Mozambican Portuguese, Amharic.</p>
-    <p><strong>Low-resource languages:</strong> Kinyarwanda, Hausa, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa.</p>
+    <p>To promote global inclusivity and cross-cultural representation, the dataset encompasses multiple languages, including many mid/low-resource and underrepresented ones in mainstream NLP research.</p>
+  <li><strong>High resource:</strong> English, German, Spanish, Arabic</li>
+      <li><strong>Mid and Low resource:</strong>  Urdu, Mozambican Portuguese, Amharic, Kinyarwanda, Hausa, Igbo, Twi, Swahili, isiXhosa, Zulu, Emakhuwa, etc.</li>
+
 
     <h3>Task Format and Subtasks</h3>
     <p>Participants may choose to compete in one or more of three subtasks:</p>
@@ -45,9 +45,7 @@
     <h3>Data Description</h3>
     <p>The dataset is sourced from news websites, Reddit, blogs, Bluesky, and regional forums, covering event types like elections, conflicts, gender rights, migration, and more. Each language includes between 3,000 and 5,000 annotated instances.</p>
     <p>Annotation tools used include Label Studio, Prolific, Potato, and Mechanical Turk.</p>
-    <p>Sample Inter-Annotator Agreement (IAA) scores indicate dataset quality: Amharic (kappa 0.49), Urdu (0.83), English (0.52).</p>
-    <p>The dataset is split into training, development, and test sets for system development and evaluation.</p>
-
+  
     <h3>Research Contributions</h3>
     <p>This task aims to advance socially responsible AI by supporting NLP for low-resource languages and fostering explainable and inclusive NLP systems. It will help establish multilingual benchmarks for polarization detection, promoting fair and transparent computational approaches to understanding societal divisions.</p>
 
@@ -55,7 +53,7 @@
     <ul>
       <li>Task announcement: TBD</li>
       <li>Data release: TBD</li>
-      <li>Evaluation phase begins: TBD/li>
+      <li>Evaluation phase begins: TBD</li>
       <li>Submission deadline: TBD</li>
       <li>Paper submissions to SemEval: TBD</li>
       <li>SemEval Workshop at ACL: TBD</li>
