lang info update

--- a/tasks.html
+++ b/tasks.html
@@ -26,7 +26,7 @@
 
     <p>This shared task is the first SemEval initiative focused on polarization, aiming to advance the computational understanding of how polarization manifests in text across multiple languages, cultures, and event types. Participants will develop models capable of detecting and interpreting polarization in a variety of online contexts.</p>
 
-    <p>The task centers on textual data collected from real-world events such as elections, international conflicts, social protests, and ideological debates. The primary goal is to evaluate systems’ ability to identify polarized content, classify its targets, and determine the linguistic expressions of polarization.</p>
+    <p>The task centers on textual data collected from real-world events such as elections, international conflicts, social protests, and ideological debates. The primary goal is to evaluate systems’ ability to identify polarized content and classify its targets..</p>
 
     <h3>Multilingual, Multicultural, and Multievent Scope</h3>
     <p>To promote global inclusivity and cross-cultural representation, the dataset encompasses multiple languages, including many mid/low-resource and underrepresented ones in mainstream NLP research.</p>
